Fixed detection of invalid JSON